# clos-dragonfly-simulation-rust

./: Cargo.toml  Makefile  README.md
output_clos/: topo_128.json
output_dragonfly/: dragonfly_128.json  dragonfly_16.json  dragonfly_32.json  dragonfly_4.json  dragonfly_64.json  dragonfly_8.json
output_dragonfly_high_bw/: dragonfly_128.json  dragonfly_16.json  dragonfly_32.json  dragonfly_4.json  dragonfly_64.json  dragonfly_8.json
src/: clos.rs  dragonfly.rs  dragonfly_high_bw.rs  lib.rs  viz.rs
