[package]
name = "clos-dragonfly-simulation-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clos-generate"
path = "src/bin/clos_generate.rs"

[[bin]]
name = "clos-sweep"
path = "src/bin/clos_sweep.rs"

[[bin]]
name = "clos-visualize"
path = "src/bin/clos_visualize.rs"

[[bin]]
name = "dragonfly-generate"
path = "src/bin/dragonfly_generate.rs"

[[bin]]
name = "dragonfly-sweep"
path = "src/bin/dragonfly_sweep.rs"

[[bin]]
name = "dragonfly-visualize"
path = "src/bin/dragonfly_visualize.rs"

[[bin]]
name = "dragonfly-high-bw-generate"
path = "src/bin/dragonfly_high_bw_generate.rs"

[[bin]]
name = "dragonfly-high-bw-sweep"
path = "src/bin/dragonfly_high_bw_sweep.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dev-dependencies]
tempfile = "3"
